[gd_scene load_steps=4 format=3 uid="uid://dl4peatq2yp7x"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_m6nuy"]
[ext_resource type="FontFile" uid="uid://bp6l2ib5awynn" path="res://Fonts/Anders.ttf" id="2_qkf13"]
[ext_resource type="Theme" uid="uid://c0noysaoxkp14" path="res://Stac_Theme.tres" id="3_fl0s2"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_m6nuy")

[node name="BG_Color" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 647.0
color = Color(0.509804, 0.188235, 0.329412, 1)

[node name="startButtons" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 647.0

[node name="VBoxContainer" type="VBoxContainer" parent="startButtons"]
layout_mode = 2

[node name="PlaceholderTitle" type="Label" parent="startButtons/VBoxContainer"]
custom_minimum_size = Vector2(195, 26)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.901961, 0.576471, 0.333333, 1)
theme_override_fonts/font = ExtResource("2_qkf13")
theme_override_font_sizes/font_size = 125
text = "Staccato"

[node name="ColorRect" type="ColorRect" parent="startButtons/VBoxContainer"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="HBoxContainer" type="HBoxContainer" parent="startButtons/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HostButton" type="Button" parent="startButtons/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(235, 105)
layout_mode = 2
theme = ExtResource("3_fl0s2")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Host Game"

[node name="VSeparator" type="VSeparator" parent="startButtons/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="JoinButton" type="Button" parent="startButtons/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(235, 105)
layout_mode = 2
theme = ExtResource("3_fl0s2")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Join Game"

[node name="Header" type="CenterContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 1152.0
offset_bottom = 70.0

[node name="headerText" type="RichTextLabel" parent="Header"]
custom_minimum_size = Vector2(150, 25)
layout_mode = 2
theme = ExtResource("3_fl0s2")
scroll_active = false

[node name="Back" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(100, 50)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 110.0
offset_bottom = 60.0
theme = ExtResource("3_fl0s2")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "<"

[node name="hostScreen" type="CenterContainer" parent="."]
visible = false
layout_mode = 0
offset_top = 48.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="hostScreen"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="hostScreen/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SendButton" type="Button" parent="hostScreen/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_fl0s2")
theme_override_colors/font_color = Color(0, 0, 0, 1)
disabled = true
text = "Send Question"

[node name="FileSearchButton" type="Button" parent="hostScreen/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_fl0s2")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Choose Music Folder"

[node name="FilepathTestLabel" type="Label" parent="hostScreen/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_fl0s2")
horizontal_alignment = 1

[node name="playerScreen" type="CenterContainer" parent="."]
visible = false
layout_mode = 0
offset_top = 48.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 5
size = Vector2i(1000, 500)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[connection signal="button_down" from="startButtons/VBoxContainer/HBoxContainer/HostButton" to="." method="_on_host_button_down"]
[connection signal="button_down" from="startButtons/VBoxContainer/HBoxContainer/JoinButton" to="." method="_on_join_button_down"]
[connection signal="button_down" from="Back" to="." method="_on_back_button_down"]
[connection signal="pressed" from="hostScreen/VBoxContainer/HBoxContainer/SendButton" to="." method="_on_send_button_pressed"]
[connection signal="pressed" from="hostScreen/VBoxContainer/HBoxContainer/FileSearchButton" to="." method="_on_file_search_button_pressed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_file_dialog_dir_selected"]
